modified the projects and separate the prometheus and grafana configurations from spring boot controller

--- a/Prometheus-Grafana/src/main/resources/application.properties
+++ b/Prometheus-Grafana/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=Prometheus-Grafana
 
-server.port=8080
+server.port=8082
 
-management.endpoints.web.exposure.include=prometheus, health, metrics
+management.endpoints.web.exposure.include=*
 matrics.tags.application=prometheus-grafana
 management.tracing.sampling.probability=1.0
 management.endpoint.prometheus.access=unrestricted
+management.endpoint.health.show-details=always
