--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,22 @@
-version: '3'
+version: '3.7'
 
 services:
   prometheus:
     image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
-    volumes:
-      - ./prometheus.yml:./prometheus.yml
-    command:
-      - '--config.file=./prometheus.yml'
-      - '--storage.tsdb.retention.time=15d'
-      - '--web.enable-lifecycle'
 
   grafana:
     image: grafana/grafana:latest
+    container_name: grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     ports:
       - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_USER=parmesh
-      - GF_SECURITY_ADMIN_PASSWORD=P27m_09@b0
-      - GF_USERS_ALLOW_SIGN_UP=false
     depends_on:
       - prometheus
+
